# fastexcel

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  cran-comments.md
.github/workflows/: pkgdown.yaml
R/: extendr-wrappers.R  fastexcel-package.R  read_excel.R  zzz.R
bench/: bench-fastexcel.R
bench/results/: fastexcel-bench.rds  fastexcel-summary.csv
bench/results/old/20260426-232710/: fastexcel-summary.csv
inst/: NOTICE
inst/benchmark/: generate-large-excel.R
inst/extdata/: Pop_Density.xlsx
man/: excel_defined_names.Rd  excel_sheet_columns.Rd  excel_sheet_info.Rd  excel_sheets.Rd  excel_table_columns.Rd  excel_table_info.Rd  excel_tables.Rd  fastexcel-package.Rd  read_excel.Rd  read_excel_table.Rd
pkgdown/: extra.js  extra.scss
src/: Makevars  Makevars.win  entrypoint.c
src/rust/: Cargo.toml
src/rust/src/: lib.rs
tests/: testthat.R
tests/testthat/: test-read_excel.R
vignettes/: reading-excel.Rmd  workbook-metadata.Rmd
